--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3d567-click-ai-|-workshop-solopreneur",
+  "name": "click-ai-|-workshop-solopreneur",
   "private": true,
   "version": "0.0.0",
   "type": "module",
