feat: Add Meta Pixel tracking and update package name
Integrates Facebook Meta Pixel for event tracking on the landing page. Also updates the application's package and metadata names to reflect its official branding.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "click-ai-|-workshop-solopreneur",
+  "name": "(official)-click-ai-|-workshop-solopreneur",
   "private": true,
   "version": "0.0.0",
   "type": "module",
